--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
 
 			android:background="?attr/selectableItemBackground"
 			android:clickable="true"
-
+			android:visibility="invisible"
 			android:padding="8dp"
 			android:src="@mipmap/ic_back"/>
 
@@ -86,6 +86,7 @@
 
 				android:text="@string/login_tip"
 				android:textColor="@color/black"
+				android:visibility="invisible"
 				android:textSize="16dp"/>
 
 			<ir.hamedgh.adminkindnesswall.customviews.edittext.EditTextIranSans
