--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
 
     <color name="dark_white">#737373</color>
     <color name="divar_button">#ffcfcfcf</color>
+    <color name="primaryDialog">@color/colorPrimary</color>
+    <color name="light_black">#414141</color>
 
 </resources>
